kcms/region_language: find available locales in localectl

BUG: 461949
FIXED-IN: 5.27

Not an ideal fix, but a fix without rewriting the entire language selection page.